--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -3,7 +3,7 @@
   "robotLength": 0.76,
   "holonomicMode": true,
   "pathFolders": [
-    "New Folder"
+    "test0208"
   ],
   "autoFolders": [],
   "defaultMaxVel": 3.0,
