--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -1,18 +1,12 @@
 {
-  "robotWidth": 0.76,
-  "robotLength": 0.76,
+  "robotWidth": 0.88,
+  "robotLength": 0.88,
   "holonomicMode": true,
   "pathFolders": [
-    "fourNotesTest",
-    "oneNoteTest",
-    "test",
-    "threeNotesTest"
+    "1"
   ],
   "autoFolders": [
-    "test",
-    "fourNotes",
-    "oneNote",
-    "threeNotes"
+    "New Folder"
   ],
   "defaultMaxVel": 3.0,
   "defaultMaxAccel": 3.0,
