--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -3,11 +3,12 @@
   "robotLength": 0.88,
   "holonomicMode": true,
   "pathFolders": [
-    "1"
+    "m",
+    "s1",
+    "s2",
+    "s3"
   ],
-  "autoFolders": [
-    "New Folder"
-  ],
+  "autoFolders": [],
   "defaultMaxVel": 3.0,
   "defaultMaxAccel": 3.0,
   "defaultMaxAngVel": 540.0,
