--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -3,12 +3,15 @@
   "robotLength": 0.88,
   "holonomicMode": true,
   "pathFolders": [
+    "Jason",
     "m",
     "s1",
     "s2",
     "s3"
   ],
-  "autoFolders": [],
+  "autoFolders": [
+    "Jason"
+  ],
   "defaultMaxVel": 5.4,
   "defaultMaxAccel": 4.0,
   "defaultMaxAngVel": 720.0,
